adding difficulty options (in progress)

--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
           </div>
           <div class="d-flex">
             <div> 
+
+              <select name="Difficulty" id="Difficulty">
+                <option value="100">
+                  Easy
+                </option>
+                <option value="81">
+                  Medium
+                </option>
+                <option value="64">
+                  Hard
+                </option>
+              </select>
+
               <button id="startBtn" class="btn btn-outline-success">
                 Play
             </button>
