--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           <div class="d-flex">
             <div> 
 
-              <select name="Difficulty" id="Difficulty">
+              <select id="difficulty">
                 <option value="100">
                   Easy
                 </option>
                 <option value="81">
                   Medium
                 </option>
-                <option value="64">
+                <option value="49">
                   Hard
                 </option>
               </select>
