still working on it

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="Css/style.css" />
-    <title>Griglia Campo Minato</title>
+    <title>Campo Minato</title>
   </head>
 
   <body>
