still trying to figure it out

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="Css/style.css" />
-    <title>Campo Minato</title>
+    <title>
+      Campo Minato
+    </title>
   </head>
 
   <body>
@@ -26,6 +28,9 @@
             <div> 
 
               <select id="difficulty">
+                <option selected value="">
+                  Choose a difficulty
+                </option>
                 <option value="100">
                   Easy
                 </option>
